# personal-ai-assistant

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vite.config.ts
apps/cli/: package.json
apps/cli/src/: index.ts
docs/: AGENTS.md  CONTEXT.md  MODULES.md  ROADMAP.md  WORKFLOW.md
docs/archive/: CLAUDE_REFACTOR.md  JARVIS_REFACTOR.md  jarvis-v2-structure.md  jarvis-vs-moltbot-analysis.md
scripts/: check-loc.ts  download-models.ps1  download-models.sh
server/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
server/migrations/: 001_initial.sql
server/src/: config.ts  index.ts
server/src/routes/: chat.ts  evolution.ts  finance.ts  health.ts  index.ts
server/src/services/: brain.ts  database.ts  domainRegistry.ts  dynamicDomainService.ts  dynamicSchema.ts  entityResolution.ts  food.ts  ollama.ts  (+6 more)
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep
src-tauri/resources/models/: README.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  voice.rs
src-tauri/src/voice/: audio_capture.rs  audio_processing.rs  buffer.rs  config.rs  controller.rs  mod.rs  state_machine.rs  vad.rs  wake_word.rs
src/components/: Chat.css  Chat.tsx  DebugLog.css  DebugLog.tsx  VoiceIndicator.tsx  VoiceSettings.css  VoiceSettings.tsx
src/hooks/: useAudioDevices.ts  useChat.ts  useDebugLog.ts  useEvolution.ts  useVoiceSettings.ts  useVoiceState.ts
src/services/: api.ts
(+25 files in other folders)
